--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -824,7 +824,7 @@ body.skey.results .working-area .choice { display: table-cell; margin: 0 0.5em 1
 body.skey.results .working-area .choice.disabled span { color: #aaa; }
 body.skey.results .working-area .choice .drawing { height: 82px; }
 body.skey.results .working-area .choice img, body.skey.results .working-area .choice label { margin-left: 18px; }
-body.skey.results .working-area .choice img { background: #fff; height: 82px; }
+body.skey.results .working-area .choice img { height: 82px; }
 body.skey.results .working-area .choice img[id] { /* only border if image has id, not on empty */ border: 1px solid #dddddd; height: 80px; }
 body.skey.results .working-area .choice label { cursor: pointer; display: block; font-family: Tahoma, "Trebuchet MS", "Lucida Sans Unicode", sans-serif; font-size: 12px; line-height: 14px; max-width: 250px; min-width: 70px; padding-top: 0; word-wrap: break-word; /* can break mid-word */ }
 body.skey.results .working-area .choice input { margin: 0 3px 0 -18px; }
@@ -898,6 +898,7 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.groups-subgroups .list-item .details a.plant-in-group, body.skey.groups-subgroups .list-item .details a.plant-in-subgroup { margin-left: 14px; }
   body.skey.groups-subgroups .list-item .details .section-title { font-size: 10px; }
   body.skey.groups-subgroups .not-my-plant { display: none; }
+  body.skey.results { /* end .working-area */ }
   body.skey.results .content .container { width: auto; }
   body.skey.results #intro-overlay { font-size: 170%; }
   body.skey.results #main { margin-left: 0; width: auto; }
@@ -919,6 +920,7 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results #question-nav .section a.clear-all-btn, body.skey.results #question-nav .section a.get-help-btn { margin: 6px 0 6px 16px; }
   body.skey.results #question-nav .scroll { height: 261px; width: 149px; }
   body.skey.results #question-nav .option-list .clear-filter { margin: 8px 0 4px; }
+  body.skey.results #question-nav .option-list li { padding-left: 8px; padding-right: 8px; }
   body.skey.results #results-section { float: none; margin: 0 0 28px; width: 100%; }
   body.skey.results .plant-list { height: auto !important; width: 100%; }
   body.skey.results .plant-list .plant { float: left; font-size: 10px; height: 190px; padding: 6px; position: static; width: 140px; }
@@ -932,13 +934,25 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results #results-display { text-align: center; }
   body.skey.results #results-display label, body.skey.results #results-display select { font-size: 13px; }
   body.skey.results #results-display img.icon { margin-left: 1px; vertical-align: -3px; }
-  body.skey.results a.get-choices { background: url("/static/images/layout/more-choices-btn.png") no-repeat scroll 0 0 transparent; height: 29px; }
-  body.skey.results .working-area { height: 375px; margin-left: 0; top: 4px !important; width: 280px; }
+  body.skey.results a.get-choices { background: url(/static/images/layout/more-choices-btn.png) no-repeat scroll 0 0 transparent; height: 29px; }
+  body.skey.results .working-area { height: 375px; margin-left: 0; padding-left: 8px; padding-right: 8px; top: 4px !important; width: 95%; }
   body.skey.results .working-area img.arrow { display: none; }
   body.skey.results .working-area h4 { font-size: 15px; margin: 2px 0; width: auto; }
   body.skey.results .working-area .info .hint p { font-size: 12px; margin-bottom: 12px; }
-  body.skey.results .working-area .choices { background: #fff; border: 1px solid #cccccc; border-left: 1px solid black; border-top: 1px solid black; display: block; height: 230px; margin-bottom: 6px; overflow: scroll; -webkit-overflow-scrolling: touch; }
-  body.skey.results .working-area .choices .row div { display: block; min-height: 30px; }
+  body.skey.results .working-area .choices, body.skey.results .working-area .row, body.skey.results .working-area .choice { display: block; }
+  body.skey.results .working-area .choices { background: #fff; border: 1px solid #999999; border-radius: 8px; border-spacing: 0; height: 230px; margin-bottom: 6px; overflow: scroll; -webkit-overflow-scrolling: touch; }
+  body.skey.results .working-area .choices.has-drawings .row { height: auto; }
+  body.skey.results .working-area .choices.has-drawings .choice, body.skey.results .working-area .choices.has-drawings .choice label { height: 56px; }
+  body.skey.results .working-area .choice { border-top: 1px solid #999999; margin: 0; height: 44px; position: relative; }
+  body.skey.results .working-area .choice .drawing { clear: left; float: right; height: 56px; margin-left: 4px; margin-right: 36px; text-align: center; width: 60px; }
+  body.skey.results .working-area .choice img, body.skey.results .working-area .choice img[id] { height: 97%; }
+  body.skey.results .working-area .choice label { display: table; font-family: Verdana, sans-serif; /* No Tahoma on iOS */ font-size: 11px; height: 44px; margin-left: 8px; position: absolute; width: 65%; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+  body.skey.results .working-area .row:first-of-type .choice:first-of-type { border-top: none; }
+  body.skey.results .working-area .checked { background: #eef2e9 url(/static/images/layout/check.png) no-repeat; background-size: auto 20px; background-position: 98% center; }
+  body.skey.results .working-area .row:first-of-type .checked:first-of-type { border-top-left-radius: 8px; border-top-right-radius: 8px; }
+  body.skey.results .working-area .row:last-of-type .checked:last-of-type { border-bottom-left-radius: 8px; border-bottom-right-radius: 8px; }
+  body.skey.results .working-area .choice-label { display: table-cell; vertical-align: middle; }
+  body.skey.results .working-area input { margin: 4px 0; opacity: 0; position: absolute; }
   body.skey.results.mobile-wide { /* Styles for testing: mobile variant where filters list is full width of screen */ }
   body.skey.results.mobile-wide #question-nav { margin: 25px 0 12px; width: 100%; }
   body.skey.results.mobile-wide #question-nav .scroll { border: 0; border-bottom: 1px solid #c3d941; height: auto; overflow: visible; width: 100%; }
@@ -950,7 +964,7 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results.mobile-wide .species-count-heading { position: relative; text-align: center; top: -10px; width: 80%; }
   body.skey.results.mobile-inline { /* Styles for testing: mobile variant where filter values appear inline */ }
   body.skey.results.mobile-inline .working-area { background: #fff; border: 0; height: auto; position: static; top: auto !important; -moz-box-shadow: none; -webkit-box-shadow: none; -o-box-shadow: none; box-shadow: none; }
-  body.skey.results.mobile-inline .working-area .choices { border: 0; height: auto; overflow: visible; } }
+  body.skey.results.mobile-inline .working-area .choices { /*border: 0;*/ height: auto; overflow: visible; } }
 /* These styles apply to smartphones and tablets */
 @media only screen and (max-width: 1024px) { body.skey.results #question-nav ul.option-list li:hover { background: #fff; /* No hover color */ }
   body.skey.results #question-nav ul.option-list li.active:hover { background: #dce890; /* Except active-filter hover color */ } }
