Fix test-page definitions layout on wider screens. (#308)

--- a/gobotany/simplekey/templates/level3_test_links.html
+++ b/gobotany/simplekey/templates/level3_test_links.html
@@ -17,12 +17,13 @@
                 font-weight: bold;
             }
             dt {
+                clear: left;
                 float: left;
                 font-weight: bold;
-                height: 2em;
                 width: 5em;
             }
             dt, dd {
+                height: 2em;
                 padding-bottom: 0.5em;
             }
         </style>
