Show or hide questions list on a small-screen variation. (#308)

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -36,7 +36,7 @@
                 </div>
 
 
-                <div id="question-nav">
+                <div id="question-nav" class="closed">
 
                     <div class="section instructions">
                         <h5>Questions for filtering:</h5>
