--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -955,6 +955,10 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results .working-area input { margin: 4px 0; opacity: 0; position: absolute; }
   body.skey.results.mobile-wide { /* Styles for testing: mobile variant where filters list is full width of screen */ }
   body.skey.results.mobile-wide #question-nav { margin: 25px 0 12px; width: 100%; }
+  body.skey.results.mobile-wide #question-nav.closed { background: none; border: 0; min-height: 0; }
+  body.skey.results.mobile-wide #question-nav.closed div:not([class="section instructions"]) { display: none; }
+  body.skey.results.mobile-wide #question-nav.closed .instructions { border-radius: 8px; }
+  body.skey.results.mobile-wide #question-nav .instructions { border-radius: 0; cursor: pointer; }
   body.skey.results.mobile-wide #question-nav .scroll { border: 0; border-bottom: 1px solid #c3d941; height: auto; overflow: visible; width: 100%; }
   body.skey.results.mobile-wide #question-nav .section { clear: left; }
   body.skey.results.mobile-wide #question-nav .section p.get-more { margin-bottom: 35px; }
@@ -962,9 +966,11 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results.mobile-wide #question-nav .section.family-genus .already-know { margin-bottom: 25px; text-align: center; width: 100%; }
   body.skey.results.mobile-wide #question-nav .section.clear, body.skey.results.mobile-wide #question-nav .section.help { float: left; height: 40px; width: 98%; }
   body.skey.results.mobile-wide .species-count-heading { position: relative; text-align: center; top: -10px; width: 80%; }
+  body.skey.results.mobile-wide .working-area .close { display: none; }
   body.skey.results.mobile-inline { /* Styles for testing: mobile variant where filter values appear inline */ }
   body.skey.results.mobile-inline .working-area { background: #fff; border: 0; height: auto; position: static; top: auto !important; -moz-box-shadow: none; -webkit-box-shadow: none; -o-box-shadow: none; box-shadow: none; }
-  body.skey.results.mobile-inline .working-area .choices { /*border: 0;*/ height: auto; overflow: visible; } }
+  body.skey.results.mobile-inline .working-area .choices { height: auto; overflow: visible; }
+  body.skey.results.mobile-inline .working-area .actions { margin-bottom: 30px; } }
 /* These styles apply to smartphones and tablets */
 @media only screen and (max-width: 1024px) { body.skey.results #question-nav ul.option-list li:hover { background: #fff; /* No hover color */ }
   body.skey.results #question-nav ul.option-list li.active:hover { background: #dce890; /* Except active-filter hover color */ } }
