--- a/gobotany/static/sass/_simplekey.scss
+++ b/gobotany/static/sass/_simplekey.scss
@@ -1343,6 +1343,21 @@ ul.get-more-questions-menu {
             #question-nav {
                 margin: 25px 0 12px;
                 width: 100%;
+                &.closed {
+                    background: none;
+                    border: 0;
+                    min-height: 0;
+                    div:not([class="section instructions"]) {
+                        display: none;
+                    }
+                    .instructions {
+                        border-radius: 8px;
+                    }
+                }
+                .instructions {
+                    border-radius: 0;
+                    cursor: pointer;
+                }
                 .scroll {
                     border: 0;
                     border-bottom: 1px solid $border-green;
@@ -1376,6 +1391,11 @@ ul.get-more-questions-menu {
                 top: -10px;
                 width: 80%;
             }
+            .working-area {
+                .close {
+                    display: none;
+                }
+            }
         } /* end &.results.mobile-wide */
 
         &.results.mobile-inline { /* Styles for testing: mobile variant where
@@ -1391,9 +1411,11 @@ ul.get-more-questions-menu {
                 -o-box-shadow: none;
                 box-shadow: none;
                 .choices {
-                    /*border: 0;*/
                     height: auto;
                     overflow: visible;
+                }
+                .actions {
+                    margin-bottom: 30px;
                 }
             }
 
