--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -954,6 +954,7 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results .working-area .choice-label { display: table-cell; vertical-align: middle; }
   body.skey.results .working-area input { margin: 4px 0; opacity: 0; position: absolute; }
   body.skey.results.mobile-wide { /* Styles for testing: mobile variant where filters list is full width of screen */ }
+  body.skey.results.mobile-wide #intro-overlay .number-of-questions:before { display: none; }
   body.skey.results.mobile-wide #question-nav { margin: 25px 0 12px; width: 100%; }
   body.skey.results.mobile-wide #question-nav.closed { background: none; border: 0; min-height: 0; }
   body.skey.results.mobile-wide #question-nav.closed div:not([class="section instructions"]) { display: none; }
