Indicate the number of questions answered in the heading.
This serves to help indicate filtering state on the mobile design
variants for which the questions list is collapsible. (#308)

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -39,7 +39,7 @@
                 <div id="question-nav" class="closed">
 
                     <div class="section instructions">
-                        <h5>Questions for filtering:</h5>
+                        <h5>Questions (<span>0</span> answered)</h5>
                     </div>
                     <div class="scroll">
                       <div class="loading">Loading questions…</div>
