--- a/gobotany/static/sass/_simplekey.scss
+++ b/gobotany/static/sass/_simplekey.scss
@@ -1243,23 +1243,25 @@ ul.get-more-questions-menu {
                 height: 29px;
             }
             .working-area {
-                height: 375px;
+                height: 100%;
+                left: 0;
                 margin-left: 0;
                 padding-left: $smallscreen-margin;
                 padding-right: $smallscreen-margin;
-                top: 4px !important;
+                position: fixed;
+                top: 0 !important;
                 width: 95%;
                 img.arrow {
                     display: none;
                 }
                 h4 {
-                    font-size: 15px;
+                    font-size: 13px;
                     margin: 2px 0;
                     width: auto;
                 }
                 .info .hint p {
-                    font-size: 12px;
-                    margin-bottom: 12px;
+                    font-size: 11px;
+                    margin-bottom: 10px;
                 }
                 .choices, .row, .choice {
                     display: block;
@@ -1269,9 +1271,11 @@ ul.get-more-questions-menu {
                     border: 1px solid #999;
                     border-radius: 8px;
                     border-spacing: 0;
-                    height: 230px;
+                    height: 250px;
                     margin-bottom: 6px;
-                    overflow: scroll;
+                    overflow: auto;
+                    position: fixed;
+                    width: 95%;
                     -webkit-overflow-scrolling: touch;
                     &.has-drawings {
                         .row {
@@ -1335,6 +1339,12 @@ ul.get-more-questions-menu {
                     opacity: 0;
                     position: absolute;
                 }
+                .actions {
+                    bottom: 0;
+                    height: 50px;
+                    position: fixed;
+                    width: 95%;
+                }
             } /* end .working-area */
         } /* end &.results */
 
@@ -1384,6 +1394,9 @@ ul.get-more-questions-menu {
                         -webkit-transform: rotate(-45deg);
                     }
                 }
+                .choices, .actions {
+                    position: static;
+                }
                 .scroll {
                     border: 0;
                     border-bottom: 1px solid $border-green;
@@ -1417,11 +1430,6 @@ ul.get-more-questions-menu {
                 top: -10px;
                 width: 80%;
             }
-            .working-area {
-                .close {
-                    display: none;
-                }
-            }
         } /* end &.results.mobile-wide */
 
         &.results.mobile-inline { /* Styles for testing: mobile variant where
@@ -1436,6 +1444,9 @@ ul.get-more-questions-menu {
                 -webkit-box-shadow: none;
                 -o-box-shadow: none;
                 box-shadow: none;
+                .close {
+                    display: none;
+                }
                 .choices {
                     height: auto;
                     overflow: visible;
