Make Questions heading fit on one line for mobile 'split.' (#308)

--- a/gobotany/static/sass/_simplekey.scss
+++ b/gobotany/static/sass/_simplekey.scss
@@ -1143,7 +1143,7 @@ ul.get-more-questions-menu {
                 .section {
                     padding: 0 0 0 4px;
                     &.instructions {
-                        padding: 12px;
+                        padding: 12px 0px 12px 8px;
                         h5 {
                             font-size: 12px;
                         }
