--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -911,7 +911,7 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results #page-head h1 { display: none; }
   body.skey.results #question-nav { font-size: 10px; margin-right: 3px; margin-top: 0; min-height: 666px; width: 149px; }
   body.skey.results #question-nav .section { padding: 0 0 0 4px; }
-  body.skey.results #question-nav .section.instructions { padding: 12px; }
+  body.skey.results #question-nav .section.instructions { padding: 12px 0px 12px 8px; }
   body.skey.results #question-nav .section.instructions h5 { font-size: 12px; }
   body.skey.results #question-nav .section.family-genus select { margin-bottom: 16px; width: 139px; }
   body.skey.results #question-nav .section.help { margin-bottom: 8px; }
@@ -938,7 +938,7 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results .working-area { height: 100%; left: 0; margin-left: 0; padding-left: 8px; padding-right: 8px; position: fixed; top: 0 !important; width: 95%; }
   body.skey.results .working-area img.arrow { display: none; }
   body.skey.results .working-area h4 { font-size: 13px; margin: 2px 0; width: auto; }
-  body.skey.results .working-area .info .hint p { font-size: 11px; margin-bottom: 12px; }
+  body.skey.results .working-area .info .hint p { font-size: 11px; margin-bottom: 10px; }
   body.skey.results .working-area .choices, body.skey.results .working-area .row, body.skey.results .working-area .choice { display: block; }
   body.skey.results .working-area .choices { background: #fff; border: 1px solid #999999; border-radius: 8px; border-spacing: 0; height: 250px; margin-bottom: 6px; overflow: auto; position: fixed; width: 95%; -webkit-overflow-scrolling: touch; }
   body.skey.results .working-area .choices.has-drawings .row { height: auto; }
