Improve the fit of the More Questions dialog on small screens. (#308)

--- a/gobotany/simplekey/templates/simplekey/_results_modal_dialogs.html
+++ b/gobotany/simplekey/templates/simplekey/_results_modal_dialogs.html
@@ -1,11 +1,10 @@
 <div id="modal">
 	<div class="modal-wrap">
 		<div class="inner">
-            <h4 class="heading">What types of things can you tell about your
-                plant?</h4>
-            <p>Optional. Check one or more boxes based on things you
-            can actually see, in order to get the next best
-            questions to answer. Or, just press the button.</p>
+            <h4 class="heading">What can you tell about your plant?</h4>
+            <p>Optional. Check boxes based on things you can actually see
+            in order to get the next best questions to answer. Or, just
+            press the button.</p>
 			<div id="choices">
 				<ul class="char-groups">
                 </ul>
