--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -919,8 +919,9 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results #question-nav .section p.get-more span { display: none; margin: 0; }
   body.skey.results #question-nav .section a.clear-all-btn, body.skey.results #question-nav .section a.get-help-btn { margin: 6px 0 6px 16px; }
   body.skey.results #question-nav .scroll { height: 261px; width: 149px; }
-  body.skey.results #question-nav .option-list .clear-filter { margin: 8px 0 4px; }
-  body.skey.results #question-nav .option-list li { padding-left: 8px; padding-right: 8px; }
+  body.skey.results #question-nav .option-list .clear-filter { background-color: #ddd; border-radius: 8px; margin: 8px 0 0; padding: 6px 0; text-align: center; width: 100%; }
+  body.skey.results #question-nav .option-list .clear-filter:hover, body.skey.results #question-nav .option-list .clear-filter:active { text-decoration: none; }
+  body.skey.results #question-nav .option-list li { padding-left: 8px; padding-right: 8px; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
   body.skey.results #results-section { float: none; margin: 0 0 28px; width: 100%; }
   body.skey.results .plant-list { height: auto !important; width: 100%; }
   body.skey.results .plant-list .plant { float: left; font-size: 10px; height: 190px; padding: 6px; position: static; width: 140px; }
@@ -975,6 +976,7 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results.mobile-wide #question-nav .section a.get-choices { width: 139px; }
   body.skey.results.mobile-wide #question-nav .section.family-genus .already-know { margin-bottom: 25px; text-align: center; width: 100%; }
   body.skey.results.mobile-wide #question-nav .section.clear, body.skey.results.mobile-wide #question-nav .section.help { float: left; height: 40px; width: 98%; }
+  body.skey.results.mobile-wide #question-nav .option-list .clear-filter { width: 50%; }
   body.skey.results.mobile-wide .species-count-heading { position: relative; text-align: center; top: -10px; width: 80%; }
   body.skey.results.mobile-inline { /* Styles for testing: mobile variant where filter values appear inline */ }
   body.skey.results.mobile-inline .working-area { background: #fff; border: 0; height: auto; position: static; top: auto !important; -moz-box-shadow: none; -webkit-box-shadow: none; -o-box-shadow: none; box-shadow: none; }
