Rename a page template from "edit..." to "view..."
The view is not actually used for editing, and we might need the "edit"
name free for a page that actually does support inline editing. #376

--- a/gobotany/editor/templates/gobotany/view_partner_plants.html
+++ b/gobotany/editor/templates/gobotany/view_partner_plants.html
@@ -2,7 +2,7 @@
 
 {% block body_content %}
 
-<h1>Species for partner “{{ partner.short_name }}”</h1>
+<h1>Plants for partner “{{ partner.short_name }}”</h1>
 
 <p>
   <a class="save-button" href="/edit/partner{{ partner.id }}-plants.csv"
